[gd_scene load_steps=13 format=3 uid="uid://b1w3l8uc6nh2h"]

[ext_resource type="Script" uid="uid://b80ql3n383i7" path="res://Systems/GrabberArm/grabber_arm.gd" id="1_3ulfp"]
[ext_resource type="Texture2D" uid="uid://d0wtlxroshbfb" path="res://Sprites/grabberHand.png" id="2_42i7w"]
[ext_resource type="Texture2D" uid="uid://h6x88fm4noye" path="res://Sprites/grabberArm.png" id="2_vqv8o"]
[ext_resource type="Script" uid="uid://c52pdvklcahfb" path="res://Player/player_reach.gd" id="3_42i7w"]
[ext_resource type="Texture2D" uid="uid://0pmfkmmgftnw" path="res://Sprites/gun.png" id="3_fyybk"]
[ext_resource type="Script" uid="uid://dmgtkfejwsm0s" path="res://Sections/section_hover.gd" id="4_bwbso"]
[ext_resource type="Texture2D" uid="uid://brqega3intb1r" path="res://icon.svg" id="5_w52l3"]
[ext_resource type="PackedScene" uid="uid://ut51d0u04hri" path="res://signal_receiver.tscn" id="6_067bv"]

[sub_resource type="SkeletonModification2DCCDIK" id="SkeletonModification2DCCDIK_vqv8o"]
target_nodepath = NodePath("../ArmEnd")
tip_nodepath = NodePath("FirstArm/SecondArm/EndEffector/Target")
ccdik_data_chain_length = 3
joint_data/0/bone_index = 0
joint_data/0/bone2d_node = NodePath("FirstArm")
joint_data/0/rotate_from_joint = false
joint_data/0/enable_constraint = false
joint_data/0/editor_draw_gizmo = true
joint_data/1/bone_index = 1
joint_data/1/bone2d_node = NodePath("FirstArm/SecondArm")
joint_data/1/rotate_from_joint = false
joint_data/1/enable_constraint = false
joint_data/1/editor_draw_gizmo = true
joint_data/2/bone_index = 2
joint_data/2/bone2d_node = NodePath("FirstArm/SecondArm/EndEffector")
joint_data/2/rotate_from_joint = false
joint_data/2/enable_constraint = false
joint_data/2/editor_draw_gizmo = true

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_vqv8o"]
enabled = true
modification_count = 1
modifications/0 = SubResource("SkeletonModification2DCCDIK_vqv8o")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vqv8o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fbmh6"]
size = Vector2(60, 41)

[node name="GrabberArm" type="Node2D" groups=["ExternalSystem", "HammerCanEdit", "MustBeSaved", "PliersCanEdit"]]
script = ExtResource("1_3ulfp")

[node name="Skeleton2D" type="Skeleton2D" parent="."]
modification_stack = SubResource("SkeletonModificationStack2D_vqv8o")

[node name="FirstArm" type="Bone2D" parent="Skeleton2D"]
scale = Vector2(0.99989176, 0.99989176)
rest = Transform2D(0.99989176, 0, 0, 0.99989176, 0, 0)
auto_calculate_length_and_angle = false
length = 55.0
bone_angle = 0.0
metadata/_local_pose_override_enabled_ = true

[node name="SecondArm" type="Bone2D" parent="Skeleton2D/FirstArm"]
position = Vector2(-0.5424042, 54.335686)
scale = Vector2(0.9999554, 0.9999554)
rest = Transform2D(0.9999554, 0, 0, 0.9999554, -0.5424042, 54.335686)
auto_calculate_length_and_angle = false
length = 55.0
bone_angle = 0.0
metadata/_local_pose_override_enabled_ = true

[node name="EndEffector" type="Bone2D" parent="Skeleton2D/FirstArm/SecondArm"]
position = Vector2(0.47111607, 51.160507)
rest = Transform2D(1, 0, 0, 1, 0.47111607, 51.160507)
auto_calculate_length_and_angle = false
length = 10.0
bone_angle = 0.0
metadata/_local_pose_override_enabled_ = true

[node name="Target" type="Bone2D" parent="Skeleton2D/FirstArm/SecondArm/EndEffector"]
position = Vector2(-0.011342764, 12.451155)
rest = Transform2D(1, 0, 0, 1, -0.011342764, 12.451155)
auto_calculate_length_and_angle = false
length = 16.0
bone_angle = 0.0

[node name="Node2D" type="Node2D" parent="Skeleton2D/FirstArm/SecondArm/EndEffector"]

[node name="Sprite2D3" type="Sprite2D" parent="Skeleton2D/FirstArm/SecondArm/EndEffector/Node2D"]
scale = Vector2(0.9999999, 0.9999999)
texture = ExtResource("2_42i7w")
offset = Vector2(0, 15)
flip_v = true

[node name="Area2D" type="Area2D" parent="Skeleton2D/FirstArm/SecondArm/EndEffector/Node2D"]
script = ExtResource("3_42i7w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skeleton2D/FirstArm/SecondArm/EndEffector/Node2D/Area2D"]
position = Vector2(-0.10080814, 19.760479)
shape = SubResource("RectangleShape2D_vqv8o")

[node name="Sprite2D2" type="Sprite2D" parent="Skeleton2D/FirstArm/SecondArm"]
position = Vector2(0.13203692, 27.076853)
scale = Vector2(1.000013, 1.000013)
texture = ExtResource("2_vqv8o")

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/FirstArm"]
position = Vector2(0, 27)
texture = ExtResource("2_vqv8o")

[node name="ArmEnd" type="Node2D" parent="."]
position = Vector2(56, 107)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_fyybk")

[node name="hoverRegion" type="Area2D" parent="."]
script = ExtResource("4_bwbso")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hoverRegion"]
position = Vector2(0, -11.5)
shape = SubResource("RectangleShape2D_fbmh6")

[node name="Sprite2D2" type="Sprite2D" parent="hoverRegion"]
visible = false
position = Vector2(0.50000095, -0.50000095)
scale = Vector2(0.0703125, 0.07031251)
texture = ExtResource("5_w52l3")

[node name="SignalReceiver" parent="." instance=ExtResource("6_067bv")]
